# agent-memory-system

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docker/: Dockerfile  docker-compose.yml
examples/: basic_usage.py  correction_learning.py  mcp_integration.md
src/agent_memory/: __init__.py
src/agent_memory/backends/: __init__.py  base.py  chroma.py  postgres.py  qdrant.py  sqlite.py
src/agent_memory/cli/: __init__.py  main.py
src/agent_memory/compression/: __init__.py  compressor.py
src/agent_memory/core/: __init__.py  config.py  memory.py  models.py
src/agent_memory/embeddings/: __init__.py  base.py  openai.py  sentence_transformers.py
src/agent_memory/mcp/: __init__.py  server.py
tests/: __init__.py  conftest.py  test_backends.py  test_memory.py
