[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory-system"
version = "0.1.0"
description = "Memory layer that learns from corrections and knows what you need before you ask"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Phoenix Assistant", email = "hello@phoenix-assistant.ai" }
]
keywords = [
    "ai",
    "memory",
    "agents",
    "mcp",
    "llm",
    "rag",
    "context",
    "machine-learning"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "aiosqlite>=0.19.0",
    "chromadb>=0.4.22",
    "click>=8.1.7",
    "httpx>=0.26.0",
    "numpy>=1.26.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "rich>=13.7.0",
    "sentence-transformers>=2.3.0",
    "tiktoken>=0.5.2",
]

[project.optional-dependencies]
postgres = [
    "asyncpg>=0.29.0",
    "psycopg[binary]>=3.1.0",
]
qdrant = [
    "qdrant-client>=1.7.0",
]
openai = [
    "openai>=1.6.0",
]
mcp = [
    "mcp>=0.1.0",
]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.9",
    "mypy>=1.8.0",
    "pre-commit>=3.6.0",
]
all = [
    "agent-memory-system[postgres,qdrant,openai,mcp,dev]",
]

[project.scripts]
mem = "agent_memory.cli.main:cli"
agent-memory = "agent_memory.cli.main:cli"

[project.urls]
Homepage = "https://github.com/phoenix-assistant/agent-memory-system"
Documentation = "https://github.com/phoenix-assistant/agent-memory-system#readme"
Repository = "https://github.com/phoenix-assistant/agent-memory-system"
Issues = "https://github.com/phoenix-assistant/agent-memory-system/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/README.md",
    "/LICENSE",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
    "B905",   # `zip()` without an explicit `strict=` parameter
]

[tool.ruff.lint.isort]
known-first-party = ["agent_memory"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "sentence_transformers.*",
    "qdrant_client.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=agent_memory --cov-report=term-missing"

[tool.coverage.run]
source = ["src/agent_memory"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
